# cgpr

./: CMakeLists.txt  README.md  rr.md  rubric.md
assets/levels/: level1.txt  level2.txt  level3.txt
assets/shaders/: pbr.frag  pbr.vert
include/: Ball.h  BoardGenerator.h  Camera.h  Config.h  Level.h  Mesh.h  Model.h  Primitives.h  Scene.h  Shader.h  Texture.h
include/glad/: glad.h
src/: Ball.cpp  BoardGenerator.cpp  Camera.cpp  Level.cpp  Mesh.cpp  Model.cpp  Primitives.cpp  Scene.cpp  Shader.cpp  Texture.cpp  glad.c  main.cpp
